--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -5,11 +5,11 @@
 
     <fragment
         android:id="@+id/articleFragment"
-        android:name="com.newsroom.app.ui.fragment.ArticleFragment"
+        android:name="com.newsroom.app.ui.fragments.ArticleFragment"
         android:label="ArticleFragment" />
     <fragment
         android:id="@+id/breakingNewsFragment"
-        android:name="com.newsroom.app.ui.fragment.BreakingNewsFragment"
+        android:name="com.newsroom.app.ui.fragments.BreakingNewsFragment"
         android:label="BreakingNewsFragment" >
         <action
             android:id="@+id/action_breakingNewsFragment_to_articleFragment"
@@ -21,7 +21,7 @@
     </fragment>
     <fragment
         android:id="@+id/savedNewsFragment"
-        android:name="com.newsroom.app.ui.fragment.SavedNewsFragment"
+        android:name="com.newsroom.app.ui.fragments.SavedNewsFragment"
         android:label="SavedNewsFragment" >
         <action
             android:id="@+id/action_savedNewsFragment_to_articleFragment"
@@ -33,7 +33,7 @@
     </fragment>
     <fragment
         android:id="@+id/searchNewsFragment"
-        android:name="com.newsroom.app.ui.fragment.SearchNewsFragment"
+        android:name="com.newsroom.app.ui.fragments.SearchNewsFragment"
         android:label="SearchNewsFragment" >
         <action
             android:id="@+id/action_searchNewsFragment_to_articleFragment"
