--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/news_nav_graph"
-    app:startDestination="@id/articleFragment">
+    app:startDestination="@id/breakingNewsFragment">
 
-    <fragment
-        android:id="@+id/articleFragment"
-        android:name="com.newsroom.app.ui.fragments.ArticleFragment"
-        android:label="ArticleFragment" />
     <fragment
         android:id="@+id/breakingNewsFragment"
         android:name="com.newsroom.app.ui.fragments.BreakingNewsFragment"
@@ -17,7 +13,8 @@
             app:enterAnim="@anim/fragment_open_enter"
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
-            app:popExitAnim="@anim/fragment_close_exit" />
+            app:popExitAnim="@anim/fragment_close_exit"
+            />
     </fragment>
     <fragment
         android:id="@+id/savedNewsFragment"
@@ -29,7 +26,8 @@
             app:enterAnim="@anim/fragment_open_enter"
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
-            app:popExitAnim="@anim/fragment_close_exit"/>
+            app:popExitAnim="@anim/fragment_close_exit"
+            />
     </fragment>
     <fragment
         android:id="@+id/searchNewsFragment"
@@ -41,6 +39,12 @@
             app:enterAnim="@anim/fragment_open_enter"
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
-            app:popExitAnim="@anim/fragment_close_exit"/>
+            app:popExitAnim="@anim/fragment_close_exit"
+            />
     </fragment>
+
+    <fragment
+        android:id="@+id/articleFragment"
+        android:name="com.newsroom.app.ui.fragments.ArticleFragment"
+        android:label="ArticleFragment" />
 </navigation>
