--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -46,5 +46,9 @@
     <fragment
         android:id="@+id/articleFragment"
         android:name="com.newsroom.app.ui.fragments.ArticleFragment"
-        android:label="ArticleFragment" />
+        android:label="ArticleFragment" >
+        <argument
+            android:name="article_arg"
+            app:argType="com.newsroom.app.models.Article" />
+    </fragment>
 </navigation>
